2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b7

 * Fix: Copying a photo from a subalbum into the same album did not work.

 * Fix: Wrong error message when try to move an item into its current place.

 * New: function old_unhtmlentities($string)

 * Fix: sanitizeInput returns just the unhtmlentities value instead of
        using gHtmlSafe which does a surrounding htmlentities.

 * Change: Added some more debug code for User::isOwnerofAlbum

2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b6

 * ImageMap fixes

   - No new ImageMaps at all :-(
   - Choosing brush color broken.
   - Several ways to hangup JS.
   - PHP notice due to missing var.

 * Fix: Ecard broken. Popup was empty, preview broken.

 * Change: New css class 'g-va-poll-resultbox'

2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b5

 * Fix: Password strengthmeter in setup broke change or
        set of new admin password.

 * Change: Set true instead of 1 for some check results.
           Example:
		$fail['fail-exec'] = 1
	   -->	$fail['fail-exec'] = true;

 * Fix: Current settings of locale_alias were not selected
        and thus could overwritten by a different value.

   Thanks to Andrew Vasilyev.

 * Fix: Avoid PHP notice in layout/userData.inc

2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b4

 * Fix: Line-ending in bars014 skin

 * Change: Some code style.

 * Change: Removed code in config.php that was made for
           PHP 4.0RC1 and earlier.

2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b3

 * Change: Unified layout of all admin/tools pages.

 * Removed: function removeInvalidAlbum() as it was redundant.

 * Fix: URL to stats from stats-wizard did not work correct embedded.

 * Fix: Stats from stats-wizard did not work at all in IE6 !!!

   Thanks to Andrew Vasilyev

2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b2

 * Fix: comments_overview_for_all was not working proper.

        Thanks to jifl from forum.
