@@ -162,9 +162,10 @@ class AlbumItem {
 	}
 
 	function getComment($commentIndex) {
-		if (!empty($this->comments)) {
+		if (!empty($this->comments) || !isValidGalleryInteger($commentIndex)) {
 			return $this->comments[$commentIndex-1];
-		} else {
+		}
+		else {
 			return null;
 		}
 	}
@@ -840,7 +841,7 @@ class AlbumItem {
 				}
 			}
 			else {
-                return gTranslate('core', "Unable to make thumbnail.") ." ($ret)";
+				return gTranslate('core', "Unable to make thumbnail.") ." ($ret)";
 			}
 		}
 
@@ -1174,7 +1175,7 @@ class AlbumItem {
 			return;
 		}
 		$uid = $user->getUid();
-		
+
 		unset($this->emailMe[$type][$uid]);
 	}
 
