@@ -45,6 +45,7 @@ a:hover, .g-dim a:hover, .g-message a:hover, .g-content-popup a:hover, .g-popup 
  * Use this classes to define "superglobal" styles
 */
 .g-main {
+	padding: 3px;
 }
 
 .g-main a {
@@ -280,6 +281,10 @@ a:hover, .g-dim a:hover, .g-message a:hover, .g-content-popup a:hover, .g-popup 
 	font-weight: bold;
 	background-image:url(../images/backgrounds/adminbar.png);
 	margin: 1px;
+}
+
+.g-adminbar .g-title {
+	font-size: 10pt;
 }
 
 .g-adminbartext {
